--- a/_posts/2024-10-08-gesp-1-bcqm3040.md
+++ b/_posts/2024-10-08-gesp-1-bcqm3040.md
@@ -51,15 +51,16 @@ categories: [GESP, 一级]
 #include <iostream>
 using namespace std;
 int main() {
-    int n, k;
-    cin >> n >> k;
+    int n, k;               // 定义变量n存储上限，k存储除数
+    cin >> n >> k;          // 从标准输入读取n和k的值
+    // 从n开始倒序遍历到1，寻找能被k整除的最大数
     for (int i = n; i >= 1; i--) {
-        if (i % k == 0) {
-            cout << i;
-            break;
+        if (i % k == 0) {   // 若当前数i能被k整除，则i即为所求幸运数
+            cout << i;      // 输出该幸运数
+            break;          // 找到后立即退出循环
         }
     }
-    return 0;
+    return 0;               // 程序正常结束
 }
 ```
 
