--- a/_posts/2025-12-27-gesp-2-202512-1.md
+++ b/_posts/2025-12-27-gesp-2-202512-1.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 真题] 
 categories: [GESP, 二级] 
 ---
-GESP C++ 六级/五级练习题，前缀和思想和队列数据结构考点应用，五六级考生均可以练习。题目难度⭐⭐⭐☆☆，洛谷难度等级`普及/提高−`。
+GESP C++ 2025年12月，二级真题第一题，考察循环语句应用，应该算比较简单。题目难度⭐☆☆☆☆。
 
 <!--more-->
 
