--- a/_posts/2025-12-27-gesp-2-202512-1.md
+++ b/_posts/2025-12-27-gesp-2-202512-1.md
@@ -1,11 +1,11 @@
 ---
 layout: post 
-title: 【GESP】C++ [2025年12月]二级真题解析，第一题环保能量球
+title: 【GESP】C++ 二级真题解析，[2025年12月]第一题环保能量球
 date: 2025-12-27 08:00 +0800 
 author: OneCoder 
 comments: true 
 math: true 
-tags: [GESP, C++, 真题] 
+tags: [GESP, C++, 真题, 基础语句] 
 categories: [GESP, 二级] 
 ---
 GESP C++ 2025年12月，二级真题第一题，考察循环语句应用，应该算比较简单。题目难度⭐☆☆☆☆。
