--- a/_posts/2025-12-27-gesp-3-202512-1.md
+++ b/_posts/2025-12-27-gesp-3-202512-1.md
@@ -5,7 +5,7 @@ date: 2025-12-27 10:00 +0800
 author: OneCoder 
 comments: true 
 math: true 
-tags: [GESP, C++, 真题, 基础语句] 
+tags: [GESP, C++, 真题, 字符串] 
 categories: [GESP, 三级] 
 ---
 GESP C++ 2025年12月，三级真题第一题，考察字符串考点，相对比较简单。题目难度⭐★☆☆☆。
