--- a/_posts/2025-12-30-gesp-4-202512-1-luogu-b4451.md
+++ b/_posts/2025-12-30-gesp-4-202512-1-luogu-b4451.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 真题, 模拟]
 categories: [GESP, 四级]
 ---
-GESP C++ 2025年12月，四级真题第一题，考察二维数组遍历与简单的统计逻辑。题目难度⭐⭐☆☆☆。
+GESP C++ 2025年12月，四级真题第一题，考察二维数组遍历与简单的统计逻辑。题目难度⭐⭐☆☆☆。洛谷难度等级`普及−`。
 
 <!--more-->
 
