--- a/_posts/2026-01-07-gesp-5-202512-2-luogu-p14918.md
+++ b/_posts/2026-01-07-gesp-5-202512-2-luogu-p14918.md
@@ -108,8 +108,8 @@ $$ Cost = \sum_{质数p} \sum_{i=1}^{N} |e_{i,p} - k_p| $$
   - 若 $mid \ge N-m$，说明中位数落在非零序列中，即中位数 $k = V[mid - (N-m)]$。
 
 - **代价计算**：
-  - 对于 $N-m$ 个 $0$，其代价之和为 $(N-m) \cdot |0 - k| = (N-m) \cdot k$。
-  - 对于 $m$ 个非零指数，遍历 $V$ 累加 $|V_i - k|$ 即可。
+  - 对于 $N-m$ 个 $0$，其代价之和为 $(N-m) \cdot \|0 - k\| = (N-m) \cdot k$。
+  - 对于 $m$ 个非零指数，遍历 $V$ 累加 $\|V_i - k\|$ 即可。
 
 - 这种方法避免了为每个质数开辟长度为 $N$ 的数组，将空间复杂度优化至与所有数的质因数总数线性相关。
 
@@ -119,6 +119,7 @@ $$ Cost = \sum_{质数p} \sum_{i=1}^{N} |e_{i,p} - k_p| $$
 - 分解质因数 $O(N \sqrt{\max(A_i)})$ 或更优（取决于实现，题目中预处理了质数，分解较快）。
 - 计算代价主要取决于排序，最坏情况下所有数的质因数个数总和相关，远小于 $O(N \log N)$ 级别。
 - 总体可以在 1s 内通过。
+
 {% include custom/custom-post-content-inner.html %}
 
 ---
