--- a/_posts/2025-06-23-gesp-3-luogu-p2911.md
+++ b/_posts/2025-06-23-gesp-3-luogu-p2911.md
@@ -73,29 +73,31 @@ GESP C++三级练习，一维数组练习，难度★★✮☆☆。
 
 ### 题目分析
 
-#### 解题思路
-
 本题的解题思路如下：
 
-1. 问题本质：
-   - 掷三个不同面数的骰子，统计所有可能的点数和
-   - 找出出现次数最多的和
-   - 如果有多个和出现次数相同，取最小值
+#### 1. 问题本质
 
-2. 解题关键：
-   - 核心思路 - 模拟统计法：
-     1. 使用数组记录每个可能的和出现的次数：
-        - 创建一个足够大的数组result，**下标表示和，值表示该和出现的次数**
-     2. 三重循环遍历所有可能的骰子点数组合：
-        - 第一个骰子：1到s1
-        - 第二个骰子：1到s2
-        - 第三个骰子：1到s3
-     3. 对每种组合，计算三个数的和并在result数组中对应位置加1
-     4. 最后遍历result数组，找出出现次数最多的最小和
+- 掷三个不同面数的骰子，统计所有可能的点数和
+- 找出出现次数最多的和
+- 如果有多个和出现次数相同，取最小值
 
-3. 复杂度分析：
-   - 时间复杂度：$O(S_1 \times S_2 \times S_3)$，其中$S_1$、$S_2$、$S_3$分别为三个骰子的面数
-   - 空间复杂度：$O(S_1 + S_2 + S_3)$，需要一个数组存储所有可能的和
+#### 2. 解题关键
+
+模拟统计法：
+     
+1. 使用数组记录每个可能的和出现的次数：
+    - 创建一个足够大的数组result，**下标表示和，值表示该和出现的次数**
+2. 三重循环遍历所有可能的骰子点数组合：
+    - 第一个骰子：1到s1
+    - 第二个骰子：1到s2
+    - 第三个骰子：1到s3
+3. 对每种组合，计算三个数的和并在result数组中对应位置加1
+4. 最后遍历result数组，找出出现次数最多的最小和
+
+#### 3. 复杂度分析
+
+- 时间复杂度：$O(S_1 \times S_2 \times S_3)$，其中$S_1$、$S_2$、$S_3$分别为三个骰子的面数
+- 空间复杂度：$O(S_1 + S_2 + S_3)$，需要一个数组存储所有可能的和
 
 {% include custom/custom-post-content-inner.html %}
 
