--- a/_posts/2026-01-03-gesp-5-202512-1-luogu-p14917.md
+++ b/_posts/2026-01-03-gesp-5-202512-1-luogu-p14917.md
@@ -5,7 +5,7 @@ date: 2026-01-03 10:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [GESP, C++, 真题, 模拟]
+tags: [GESP, C++, 真题, 模拟算法]
 categories: [GESP, 五级]
 ---
 GESP C++ 2025年12月，五级真题第一题，考察二分答案算法思想，在历届真题中属于相对少见的，对考试来说有一定难度。题目难度⭐⭐⭐☆☆。洛谷难度等级`普及/提高−`。
