--- a/_posts/2026-01-29-csp-j-2025-p14357.md
+++ b/_posts/2026-01-29-csp-j-2025-p14357.md
@@ -6,7 +6,7 @@ author: OneCoder
 comments: true
 math: true
 tags: [CSP, C++, 贪心, 排序]
-categories: [CSP, XL]
+categories: [CSP, J]
 ---
 CSP-J 2025真题- 拼数，字符串、一维数组/排序考点，带有初级的贪心思想，适合GESP三、四级考生练习，难度⭐⭐☆☆☆，洛谷难度等级`普及−`。
 
