--- a/_posts/2026-02-10-csp-j-2024-p11227.md
+++ b/_posts/2026-02-10-csp-j-2024-p11227.md
@@ -5,10 +5,10 @@ date: 2026-02-10 08:00 +0800
 author: OneCoder
 comments: true
 math: true
-tags: [CSP, C++, 动态规划]
+tags: [CSP, C++, 模拟, 字符串]
 categories: [CSP, J]
 ---
-CSP-J 2024真题- 扑克牌，动态规划考点，适合GESP二、三级左右水平的考生练习（二级需要先了解字符串），难度⭐☆☆☆☆，洛谷难度等级`入门`。
+CSP-J 2024真题- 扑克牌，模拟考点，适合GESP二、三级左右水平的考生练习（二级需要先了解字符串），难度⭐☆☆☆☆，洛谷难度等级`入门`。
 
 <!--more-->
 
