--- a/_posts/2026-02-13-gesp-5-luogu-p1102.md
+++ b/_posts/2026-02-13-gesp-5-luogu-p1102.md
@@ -8,7 +8,7 @@ math: true
 tags: [GESP, C++, 二分查找] 
 categories: [GESP, 五级] 
 ---
-GESP C++ 五级练习题，二分查找考点应用，重点理解二分查找和STL二分查找库的应用。五级考生可以练习。题目难度⭐⭐☆☆☆，洛谷难度等级`普及−`。
+GESP C++ 五级练习题，二分查找考点应用，重点理解二分查找法和双指针法的应用。四-五级考生可以练习。题目难度⭐⭐☆☆☆，洛谷难度等级`普及−`。
 
 <!--more-->
 
