--- a/_posts/2026-02-13-gesp-5-luogu-p1102.md
+++ b/_posts/2026-02-13-gesp-5-luogu-p1102.md
@@ -183,7 +183,7 @@ int main() {
 
     int n;
     long long c;
-    if (!(std::cin >> n >> c)) return 0;
+    std::cin >> n >> c;
 
     for (int i = 0; i < n; i++) {
         std::cin >> a[i];
