--- a/_posts/2026-02-15-noi-p-2001-luogu-p1024.md
+++ b/_posts/2026-02-15-noi-p-2001-luogu-p1024.md
@@ -6,7 +6,7 @@ author: OneCoder
 comments: true 
 math: true 
 tags: [GESP, NOIP, C++, 二分查找] 
-categories: [NOIP, 2001] 
+categories: [NOIP, "2001"] 
 ---
 NOIP 2001真题，二分法考点应用，重点理解二分思想应用。GESP 五、六级考生可以练习。题目难度⭐⭐★☆☆，洛谷难度等级`普及−`。
 
