--- a/_posts/2025-06-26-gesp-3-luogu-p1319.md
+++ b/_posts/2025-06-26-gesp-3-luogu-p1319.md
@@ -82,31 +82,33 @@ GESP C++三级练习，字符串/位运算，难度★★☆☆☆。
 
 ### 题目分析
 
-#### 解题思路
-
 本题的解题思路如下：
 
-1. 问题本质：
-   - 输入一串数字，第一个数字 $N$ 表示要生成的点阵大小
-   - 后续数字交替表示连续的 0 和 1 的个数
-   - 需要按照这些数字生成一个 $N \times N$ 的二维点阵图案
+#### 1. 问题本质
 
-2. 解题关键：
-   - 核心思路 - 线性输出：
-     1. 读取输入数据：
-        - 首先读取矩阵大小 $N$
-        - 后续依次读取表示连续 0 和 1 个数的数字
-     2. 按规则输出：
-        - 维护当前应输出的数字（0或1）
-        - 每读取一个数字，就输出相应个数的当前数字
-        - 每输出 $N$ 个字符就换行
-        - 每次输出完后切换当前数字（0变1，1变0）
-     3. 使用位运算优化数字切换：
-        - 可以用异或运算 `^= 1` 来实现 0/1 切换
+- 输入一串数字，第一个数字 $N$ 表示要生成的点阵大小
+- 后续数字交替表示连续的 0 和 1 的个数
+- 需要按照这些数字生成一个 $N \times N$ 的二维点阵图案
 
-3. 复杂度分析：
-   - 时间复杂度：$O(N^2)$，需要输出 $N \times N$ 个字符
-   - 空间复杂度：$O(1)$，只需要少量变量即可完成
+#### 2. 解题关键
+
+核心思路 - 线性输出：
+
+1. 读取输入数据：
+    - 首先读取矩阵大小 $N$
+    - 后续依次读取表示连续 0 和 1 个数的数字
+2. 按规则输出：
+    - 维护当前应输出的数字（0或1）
+    - 每读取一个数字，就输出相应个数的当前数字
+    - 每输出 $N$ 个字符就换行
+    - 每次输出完后切换当前数字（0变1，1变0）
+3. 使用位运算优化数字切换：
+    - 可以用异或运算 `^= 1` 来实现 0/1 切换
+
+#### 3. 复杂度分析
+
+- 时间复杂度：$O(N^2)$，需要输出 $N \times N$ 个字符
+- 空间复杂度：$O(1)$，只需要少量变量即可完成
 
 {% include custom/custom-post-content-inner.html %}
 
